# smolml

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: candidates.md  harness.md  plan.md  prd.md
docs/adr/: 0001-loss-per-flop-on-tiny-corpus.md  0002-pytorch-mps-defer-cuda.md  0003-source-iv-only-no-parallelism.md  0004-prequential-total-flop-evaluation.md  0005-mdx-astro-learning-site.md  0006-dedicated-docs-builder-agent.md  0007-icl-loss-per-flop-at-fixed-memory.md
docs/learning/: .gitignore  CONTRIBUTING.md  PROCESS.md  astro.config.mjs  index.md  package-lock.json  package.json
docs/plans/: 2026-06-20-control-rung-chemotaxis.md  2026-06-25-forage-local-learner.md
docs/researcher-notes/: C.A.4-forage-local-learner.md
docs/tasks/: 0.1-baseline-harness.md  0.2-prequential-eval-mode.md  0.3-context-mixing-reference.md  A.1-fast-weight-memory-candidate.md  (+13 more)
smolml/: __init__.py  cli.py  control_eval.py  control_train.py  device.py  eval.py  flops.py  leaderboard.py  prequential.py  train.py
tests/: test_bpb.py  test_chemotaxis.py  test_chemotaxis_min.py  test_column_mix.py  test_context_mixing.py  test_control_baseline.py  test_control_eval.py  test_control_seam.py  test_control_train.py  test_delta_mix.py  test_fast_weight.py  test_flops.py  test_forage.py  test_forage_min.py  test_forage_reservoir.py  test_gated_mix.py  test_hashed_mix.py  test_metric_guards.py  test_pc_refine.py  test_prequential.py  test_render.py  test_reservoir.py  test_reservoir_plastic.py  test_smoke.py  test_warm_mix.py
(+132 files in other folders)
