[project]
name = "smolml"
version = "0.1.0"
description = "Scout harness: search for learning algorithms with better loss-per-FLOP than a transformer baseline, at tiny scale."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.scripts]
smolml = "smolml.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smolml"]

# This machine (and CI) is CPU-only; pull the CPU-only torch wheel so installs
# stay small and fast. Device auto-detect (cuda>mps>cpu) still works on any host;
# to run on CUDA/MPS hardware, point this index at the matching torch build.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
